--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@
  spring.datasource.username=root
  spring.datasource.password=MySQLAEG759@
  spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#JWT
+jwt.secret = secret
+jwt.expiration = 3600
