--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,17 @@
- spring.jpa.hibernate.ddl-auto=update
- spring.datasource.url=jdbc:mysql://localhost:3306/databaseaeg?useSSL=false&serverTimezone=UTC
- spring.datasource.username=root
- spring.datasource.password=MySQLAEG759@
- spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#Ambientes locales o de prueba 
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/databaseaeg?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=MySQLAEG759@
+
+#Ambientes de producci\u00f3n
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=jdbc:mysql://uxmas68m7ixxer3h:pqdWUYop6wBSPef5bcFz@bzir62kk123jzsnefhhi-mysql.services.clever-cloud.com:3306/bzir62kk123jzsnefhhi
+spring.datasource.username=uxmas68m7ixxer3h
+spring.datasource.password=pqdWUYop6wBSPef5bcFz
+ 
 
 #JWT
 jwt.secret = secret
